fix xml view on mobile and display line numbers

--- a/src/renderer/overrides.css
+++ b/src/renderer/overrides.css
@@ -100,7 +100,7 @@
 }
 
 .CodeMirror-gutters {
-  @apply bg-secondary!;
+  @apply bg-primary! border-0!;
 }
 
 .CodeMirror-placeholder {
